version 0.99.5-rc XX-MMM-2010
 . [NEW] Sprite: Added support for Zwoptex v1.0 (issue #913)
 . [FIX] Particles: Built-in particles use QuadParticles when compiled in ARMv7,
                and PointParticles when compiled in ARMv6
 . [FIX] Templates & Tests: call CC_DIRECTOR_END() on AppDelegate Terminate
 
version 0.99.4 - 14-Jul-2010
 . [NEW] CocosDenshion: switching between background and foreground music (issue #928)
 . [FIX] CocosDenshion: fixed memory leak weak reallocing buffers (issue #919)
 . [FIX] CocosDenshion: SimpleAudioEngine's enable works as expected (issue #927)
 . [FIX] ccCArray: ccCArrayAppendValueWithResize fixed function signature (issue #926)
 . [FIX] Director: 2d projection + HighRes works OK (issue #918)
 . [FIX] Director: purgeCachedData doesn't purge the SpriteFrameCache (issue #922)
 . [FIX] EAGLView: removed unused 'delegate_' ivar
 . [FIX] EAGLView: it is possible to resize the view (issue #914)
 . [FIX] EAGLView: projection is recalculated after view is resized (issue #924)
 . [FIX] GLES-Render: solid objects' colors synced with box2d repository
 . [FIX] Scheduler: Doesn't reschedule already scheduled method. It only updates the interval.
 . [FIX] Templates & Tests: added App Delegate foreground & background callbacks
 
 version 0.99.4-rc3 - 01-Jul-2010
 . [FIX] All: Import ccCArray instead of ccArray (compiles in case sentive file system)
 . [FIX] CCArray: fixed overflow (issue #901)
 . [FIX] CocosDenshion: Fixed bug in CDBufferManager, added test case to FadeToGrey, fixed Info.plist
 . [FIX] RenderTexture: works in HiRes mode (issue #898)
 . [FIX] Director: Avoid re-scale initial issue (issue #899, issue #350)
 . [FIX] Director: convertToUI works as expected (issue #902)
 . [FIX] Director: renamed mainLoop -> drawScene
 . [FIX] Director: appended '_' to ivars (eg: FPSLabel -> FPSLabel_)

version 0.99.4-rc2 - 24-Jun-2010
 . [NEW] CCArray: Internally uses CCARRAY_FOREACH. Improved performance (issue #353)